[package]
name = "edn-format"
version = "3.0.1"
edition = "2021"
license = "MIT"
keywords = ["serialization", "serde", "edn"]
categories = ["encoding", "parser-implementations"]
include = ["/src", "Cargo.toml", "README.md", "LICENSE.txt"]
description = "Rust implementation of EDN (Extensible Data Notation)"
homepage = "https://github.com/bowbahdoe/edn-format"
repository = "https://github.com/bowbahdoe/edn-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
num-bigint = "0.4.3"
bigdecimal = "0.3.0"
internship = "0.6.0"
thiserror = "1.0"
itertools = "0.10.3"
chrono = "0.4.19"
ordered-float = "2.8.0"